added attachments,count invitation send, received
